# lusid-sdk-python

./: .openapi-generator-ignore  .readthedocs.yaml  .travis.yml  CODE_OF_CONDUCT.md  Dockerfile  LICENSE.md  README.md  build.sh  config.json  docker-compose-publish.yml  docker-compose.yml  generate.sh  lusid.json  publish.Dockerfile  publish.sh
sdk/: Dockerfile  MANIFEST.in  README.md  docker-compose.yml  features.txt  lusid_README.md  pyproject.toml  requirements.dev.txt  requirements.txt  setup.py
sdk/docs/: A2BBreakdown.md  A2BCategory.md  A2BDataRecord.md  A2BMovementRecord.md  Abor.md  AborApi.md  AborConfiguration.md  AborConfigurationApi.md  AborConfigurationProperties.md  AborConfigurationRequest.md  AborProperties.md  AborRequest.md  AcceptEstimateValuationPointResponse.md  AccessControlledAction.md  AccessControlledResource.md  AccessMetadataOperation.md  AccessMetadataValue.md  Account.md  AccountHolder.md  AccountHolderIdentifier.md  AccountProperties.md  AccountedQuote.md  AccountedTransaction.md  AccountingMethod.md  AccountsUpsertResponse.md  AccumulationEvent.md  ActionId.md  ActionResultOfPortfolio.md  AddBusinessDaysToDateRequest.md  AddBusinessDaysToDateResponse.md  AddTransactionPropertyResponse.md  AdditionalPayment.md  AddressDefinition.md  AddressKeyAlias.md  AddressKeyAliasApi.md  AddressKeyComplianceParameter.md  AddressKeyComplianceParameterAllOf.md  AddressKeyDefinition.md  AddressKeyDefinitionApi.md  AddressKeyFilter.md  (+1704 more)
sdk/examples/: hello_world.py
sdk/features/: feature_extractor.py  features_temp_file_manager.py  lusid_feature.py  main.py
sdk/features/unit/: test_feature_extractor.py  test_feature_file_writer.py
sdk/lusid/: __init__.py  __version__.py  api_client.py  configuration.py  exceptions.py  rest.py
sdk/lusid/api/: __init__.py  abor_api.py  abor_configuration_api.py  address_key_alias_api.py  address_key_definition_api.py  aggregated_returns_api.py  aggregation_api.py  allocation_service_api.py  allocations_api.py  amortisation_rule_sets_api.py  analytics_stores_api.py  application_metadata_api.py  blocks_api.py  calendars_api.py  chart_of_accounts_api.py  check_definitions_api.py  complex_market_data_api.py  compliance___generic_api.py  compliance_api.py  configuration_recipe_api.py  conventions_api.py  corporate_action_sources_api.py  (+74 more)
sdk/tests/: api_client_builder.py  finbournetest.py  instrument_loader.py  test_business_agility_test_environment.py  test_data_utilities.py  test_finbourne_client.py  test_token_refresh.py  test_transparency_oversight_thirdparty.py  test_transparency_strategies.py
(+2386 files in other folders)
