[tool.poetry]
name = "lusid-sdk"
version = "2.0.0"
description = "LUSID API"
authors = ["FINBOURNE Technology <info@finbourne.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/GIT_USER_ID/GIT_REPO_ID"
keywords = ["OpenAPI", "OpenAPI-Generator", "LUSID API", "lusid-sdk"]
packages = [
    {include = "lusid"}
]

[tool.poetry.dependencies]
python = "^3.8"

urllib3 = ">= 1.25.3"
python-dateutil = ">=2.8.2"
aiohttp = ">= 3.8.4"
pydantic = "^1.10.5, <2"
aenum = ">=3.1.11"

[tool.poetry.dev-dependencies]
pytest = ">=7.2.1"
tox = ">=3.9.0"
flake8 = ">=4.0.0"

[tool.poetry.group.dev.dependencies]
lusidfeature = "^0.2.4"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pylint.'MESSAGES CONTROL']
extension-pkg-whitelist = "pydantic"